Fixed z-index problem with video on ipad

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ img{
   padding: 0;
 }
 
+video{
+  -webkit-transform-style: preserve-3d;
+}
+
 #container{
   position: absolute;
   left: 0;
@@ -61,12 +65,12 @@ img{
 }
 
 #video_and_timeline_container{
-  position: absolute;
+  position: relative;
   left: 0;
   top: 0;
   width: 1024px;
   height: 749px;
-  z-index: 0;
+  /*z-index: 0;*/
   overflow: hidden;
 }
 /*--------------------------------------------*/
